[package]
name = "error_safari"
version = "0.1.0"
edition = "2021"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]

[dependencies]
anyhow = "1.0.57"
clap = "3.1.15"
deutsche-bahn-delay-reasons = { git = "https://github.com/barafael/deutsche-bahn-delay-reasons.git" }
famous-last-words = { git = "https://github.com/barafael/famous-last-words.git" }
klask = { git = "https://github.com/barafael/klask" }
rand = "0.8.5"
random-emoji = { git = "https://github.com/barafael/random-emoji.git" }
thiserror = "1.0.31"
